todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-volume-claim-1
      containers:
        - name: todo-app
          image: docker.io/pjmartin/todo-app:2.10@sha256:66e88a2ea0494f6e804b13959bcdd9bd1640759732397b09894274528f3197d2
          volumeMounts:
            - name: shared
              mountPath: /app/data
